# JaSonicFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CommandLineJSFX/: CMakeLists.txt
CommandLineJSFX/src/: main.cpp
LibJSFX/: CMakeLists.txt
LibJSFX/include/: DoubleBuffer.h  FIFOBuffer.h  FIRFilter.h  FileIO.h  IIRFilter.h  test.h
LibJSFX/src/: FIFOBuffer.cpp  FIRFilter.cpp  FileIO.cpp  IIRFilter.cpp  test.cpp
TestJSFX/: CMakeLists.txt
TestJSFX/src/: TestFIFOBuffer.cpp  TestJSFX.cpp  main.cpp
scripts/: wav2xml.py
